--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -785,6 +785,8 @@
     <string name="pref_background_custom_color">Custom color</string>
     <string name="export_aborted">Export aborted.</string>
     <string name="auto_download_messages">Auto-Download Messages</string>
+    <string name="pref_notify_forward">Notify Forwarding Access</string>
+    <string name="pref_notify_forward_request_explain">Control if third parties can request access to your forwarded messages.</string>
     <!-- %1$s will be replaced by a human-readable number of bytes, eg. 32 KiB, 1 MiB -->
     <string name="up_to_x">Up to %1$s</string>
     <string name="up_to_x_most_worse_quality_images">Up to %1$s, most worse quality images</string>
